Add debug output and ensure categories are created on Railway startup

--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -179,7 +179,7 @@
                                 {{ category.name }} ({{ category.product_count }})
                             </option>
                         {% empty %}
-                            <option value="" disabled>No categories available</option>
+                            <option value="" disabled>No categories available (Debug: categories={{ categories|length }})</option>
                         {% endfor %}
                     </select>
                 </div>
