--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,9 @@
     <!-- Navigation -->
     <nav class="bg-white text-gray-900 shadow-lg" x-data="{ mobileMenuOpen: false }">
         <!-- Orange Top Bar -->
-        <div class="bg-orange-600 text-white text-xs py-1">
+        <div class="bg-orange-600 text-white text-sm md:text-base py-2 md:py-3">
             <div class="container mx-auto px-4 text-center">
-                <span>Makolamarketplace.com</span>
+                <span class="font-medium">Makolamarketplace.com</span>
             </div>
         </div>
         
