--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -94,7 +94,7 @@
                                    class="w-20 px-3 py-2 border border-gray-300 rounded-lg">
                         </div>
                         <button type="submit" class="flex-1 bg-orange-600 text-white px-6 py-3 rounded-lg hover:bg-orange-700 font-semibold">
-                            Add to Cart
+                            Add to Shopping List
                         </button>
                     </form>
                 {% else %}
